	* arch/arm/src/moxart/: Add support for MoxaRT SoC found in the most
	  Moxa serial converters such as NP51x0, NP66xx, UC72xx.  From Anton
	  D. Kachalov (2015-07-29).
	* configs/moxa: Moxa NP51x0 series of 2-port advanced RS-232/422/485
	  serial device servers.  From Anton D. Kachalov (2015-07-29).
	* drivers/net/ and include/nuttx/net: Add support for a Faraday
	* FTMAC100 Ethernet MAC Driver.  From Anton D. Kachalov (2015-07-29).
	* 16550 UART Driver: Add a configuration option to indicate the the
	  THR empty bit is inverted.  This is the the case for the moxART SoC.
	  Based comments from Anton D. Kachalov (2015-07-29).
	* STM32 F4:  Add DMA support to the ADC driver for STM32 F4.  From
	  Max Kriegler (2015-07-30).
	* sem_tickwait():  Added this function for internal use within the
	  OS.  It is a non-standard but more efficient version of sem_timedwait()
	  for use in higher performance device drivers (2015-08-01).
	* drivers/net/slip.c:  Fix another compilation error (2015-08-02).
	* drivers/can.c include/nuttx/can.h, and fs/fs.h:  Add CAN IOCTL command
	  definitions to manage CAN message filtering (2015-08-05)
	* drivers/Kconfig and can.c:  Add configuration to support DLC to byte
	  conversions needed for CAN FD mode (2015-08-05).
	* arch/arm/src/samv7:  Add an MCAN driver for the SAMV7 platform
	  (2015-08-06).
	* drivers/sensors/lm92.c and include/nuttx/sensors/lm92.h:  Add a driver
	  for the LM92 temperature sensor.  Contributed by Paul Patience
	  (2015-08-06).
	* drivers/sensors/as5048b.c and include/nuttx/sensors/as5048b.h: Add
	  support for an AS5048B rotary magnetic sensor.  From Paul Patience
	  (2015-08-06).
	* include/nuttx/spi/slave.h:  Add a definition of an SPI slave
	  interface (2015-08-08).
	* arch/arm/src/samv7: Add the framework for an SPI slave drvier.  This
	  driver has a lot of missing logic on initial commit (2015-08-09).
	* arch/arm/src/samv7: Basic, no-DMA SPI slave driver is in place
	  (2015-080=-10).
