@@ -10798,4 +10798,6 @@
 	  driver has a lot of missing logic on initial commit (2015-08-09).
 	* arch/arm/src/samv7: Basic, no-DMA SPI slave driver is in place
 	  (2015-080=-10).
-
+	* fs/vfs/epoll.c and include/sys/epoll.h: Add a very simple epoll layer
+	  just around poll calls. To satisfy build app requirements.  From Anton
+	  D. Kachalov.
